[package]
name = "coliru"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.0"
tempfile = "3"

[dev-dependencies]
regex = "1.10.5"
